update game_engine and communication with collections
